# HTTP-Service-compose

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: Core-class.md
include/: ControllerBuilder.hpp  ControllerDiscovery.hpp  ControllerDiscovery.inl  ScopedContainer.hpp  ServiceBuilder.hpp  ServiceBuilder.inl  ServiceCollection.hpp  ServiceContainer.hpp
include/HSC/: ControllerDiscovery.hpp  ControllerDiscovery.inl  ScopedContainer.hpp  ServiceBuilder.hpp  ServiceBuilder.inl  ServiceCollection.hpp  ServiceCollection.inl  ServiceContainer.hpp
include/HSC/Exception/: ControllerDIException.hpp  MiddlewareDIException.hpp  ServiceDIException.hpp  ServiceException.hpp
include/HSC/Registery/: Controller.hpp  Controller.inl  Middleware.hpp  Middleware.inl  Route.hpp  Route.inl  Service.hpp  Service.inl  ServiceType.hpp
include/HSC/utils/: ControllerCtorInfo.hpp  ControllerDiscovery.hpp  ControllerDiscovery.inl  InvokeInfo.hpp  InvokeInfo.inl  MiddlewareCtorInfo.hpp  MiddlewareCtorInfo.inl  RoutingParameter.hpp  RoutingParameter.inl  ServiceCtorInfo.hpp  ServiceCtorInfo.inl
include/HTTP/: Context.hpp  Method.hpp  Response.hpp  Route.hpp
include/Registery/: Controller.hpp  Controller.inl  Route.hpp  Route.inl  Service.hpp  Service.inl
include/meta/: concept.hpp  constraint.hpp  ctor_getter.hpp  extra.hpp  extra.inl  get_base_interface.hpp  http.hpp  http.inl  make_parameters_tuple.hpp  make_parameters_tuple.inl  metaconcept.hpp  retreive_type.hpp  strncmp.hpp  using.hpp
src/: ScopedContainer.cpp  ServiceBuilder.cpp  ServiceCollection.cpp  ServiceContainer.cpp  main.cpp
src/HSC/: ScopedContainer.cpp  ServiceBuilder.cpp  ServiceCollection.cpp  ServiceContainer.cpp
src/HSC/Registery/: Route.cpp  (+1 more)
src/Registery/: Route.cpp  Service.cpp
(+14 files in other folders)
